assets/less/pages/release-notes.less
.page-release-notes {
  .accordion {
    width: 100%;
    min-width: auto;
    margin-left: auto;
    margin-right: auto;
  }

  .release-notes-container {
    padding-top: 0;
  }

  .release-text {
    text-align: left;
    margin-bottom: 2rem;
    li {
      list-style: none;
    }
  }

  .system-requirements {
    ul {
      .styled-list();
    }
  }

  .wide {
    width: 60%;
  }

  .header-section {
    margin-top: 6rem;
    margin-bottom: 2rem;

    &:first-child {
      margin-top: 0;
    }
  }

  .note-flex {
    display: flex;
    align-items: start;
    flex-direction: row;
  }

  .note-container {
    display: flex;
    align-items: start;
    margin-bottom: 1rem;
    flex-direction: column;
  }

  .note-category {
    margin: 0 1rem 0 0;

    .category-icon {
      width: 1.5rem;
      color: var(--color-blue-70);
    }

    .category-container {
      display: flex;
      gap: 0.5rem;
      text-transform: capitalize;
    }
  }

  .note-text {
    text-align: left;
    font-weight: 500;

    p {
      margin: 0;
    }
  }

  .note-bug-numbers {
    width: 100%;

    p {
      display: flex;
      flex-direction: row;
      justify-content: left;
      gap: 1rem;
    }

    // per each bug
    a::after {
      content: ',';
    }

    a:last-child::after {
      content: '';
    }
  }
}

